	  the python garbage collector by Bedrich Kosata.
	* bugfix #380: Minimizing effect of discrepancies in sizeof(bool) at
	  build time and when used.
	* bugfix #383: Fix detection of empty nonterminals of multiple labels.
	* Fixed the ommission of rrsets in nsec(3)s and rrsigs to all occluded
	  names (in stead of just the ones that contain glue only) and all
	  obscured records on the delegation points (in stead of just the glue).
	* Clarify the operation of ldns_dnssec_mark_glue and the usage of
	  ldns_dnssec_node_next_nonglue functions in the documentation.
	* Added function ldns_dnssec_mark_and_get_glue as an real fast
	  alternative for ldns_zone_glue_rr_list.

1.6.9	2011-03-16
	* Fix creating NSEC(3) bitmaps: make array size 65536,
	  don't add doubles.
	* Fix printout of escaped binary in TXT records.
	* Parsing TXT records: don't skip starting whitespace that is quoted.
	* bugfix #358: Check if memory was successfully allocated in
	  ldns_rdf2str().
	* Added more memory allocation checks in host2str.c
	* python wrapper for ldns_fetch_valid_domain_keys by Bedrich Kosata.
	* fix to compile python wrapper with swig 2.0.2.
	* Don't fallback to SHA-1 when creating NSEC3 hash with another
	  algorithm identifier, fail instead (no other algorithm identifiers
	  are assigned yet).

1.6.8	2011-01-24
	* Fix ldns zone, so that $TTL definition match RFC 2308.
	* Fix lots of missing checks on allocation failures and parse of 
	  NSEC with many types and max parse length in hosts_frm_fp routine
	  and off by one in read_anchor_file routine (thanks Dan Kaminsky and
	  Justin Ferguson).
	* bugfix #335: Drill: Print both SHA-1 and SHA-256 corresponding DS
	  records.
	* Print correct WHEN in query packet (is not always 1-1-1970)
	* ldns-test-edns: new example tool that detects EDNS support.
	* fix ldns_resolver_send without openssl.
	* bugfix #342: patch for support for more CERT key types (RFC4398).
	* bugfix #351: fix udp_send hang if UDP checksum error.