@@ -302,7 +302,7 @@ ldns_dnssec_name_new()
 		return NULL;
 	}
 	/*
-         * not needed anymore because of CALLOC
+	 * not needed anymore because CALLOC initalizes everything to zero.
 
 	new_name->name = NULL;
 	new_name->rrsets = NULL;
