@@ -85,13 +85,12 @@ ldns_rdf *ldns_sign_public_rsamd5(ldns_buffer *to_sign, RSA *key);
 /**
  * Marks the names in the zone that are occluded. Those names will be skipped
  * when walking the tree with the ldns_dnssec_name_node_next_nonglue()
- * function. But watch out! Names that are partially obscured (like glue with
+ * function. But watch out! Names that are partially occluded (like glue with
  * the same name as the delegation) will not be marked and should specifically 
- * be taken into account seperatly.
+ * be taken into account seperately.
  *
  * When glue_list is given (not NULL), in the process of marking the names, all
- * glue resource records will be pushed to that list. Even glue in partially
- * obscured names.
+ * glue resource records will be pushed to that list, even glue at the delegation name.
  *
  * \param[in] zone the zone in which to mark the names
  * \param[in] glue_list the list to which to push the glue rrs
@@ -104,9 +103,9 @@ ldns_dnssec_zone_mark_and_get_glue(
 /**
  * Marks the names in the zone that are occluded. Those names will be skipped
  * when walking the tree with the ldns_dnssec_name_node_next_nonglue()
- * function. But watch out! Names that are partially obscured (like glue with
+ * function. But watch out! Names that are partially occluded (like glue with
  * the same name as the delegation) will not be marked and should specifically 
- * be taken into account seperatly.
+ * be taken into account seperately.
  *
  * \param[in] zone the zone in which to mark the names
  * \return LDNS_STATUS_OK on succesful completion
@@ -116,7 +115,7 @@ ldns_dnssec_zone_mark_glue(ldns_dnssec_zone *zone);
 
 /**
  * Finds the first dnssec_name node in the rbtree that is not occluded.
- * It *does* return names that are partially obscured.
+ * It *does* return names that are partially occluded.
  *
  * \param[in] node the first node to check
  * \return the first node that has not been marked as glue, or NULL
