@@ -21,11 +21,12 @@
 	* bugfix #383: Fix detection of empty nonterminals of multiple labels.
 	* Fixed the ommission of rrsets in nsec(3)s and rrsigs to all occluded
 	  names (in stead of just the ones that contain glue only) and all
-	  obscured records on the delegation points (in stead of just the glue).
+	  occluded records on the delegation points (in stead of just the glue).
 	* Clarify the operation of ldns_dnssec_mark_glue and the usage of
 	  ldns_dnssec_node_next_nonglue functions in the documentation.
 	* Added function ldns_dnssec_mark_and_get_glue as an real fast
 	  alternative for ldns_zone_glue_rr_list.
+	* Fix parse buffer overflow for max length domain names.
 
 1.6.9	2011-03-16
 	* Fix creating NSEC(3) bitmaps: make array size 65536,
